@@ -2122,7 +2122,7 @@ setRlibs <-
 
         ## Check src/Make* for LF line endings, as Sun make does not accept CRLF
         checkingLog(Log, "line endings in Makefiles")
-        bad_files <- character()
+        bad_files <- noEOL<- character()
         ## .win files are not checked, as CR/CRLF work there
         all_files <-
             dir("src",
@@ -2133,11 +2133,17 @@ setRlibs <-
             contents <- readChar(f, file.size(f), useBytes = TRUE)
             if (grepl("\r", contents, fixed = TRUE, useBytes = TRUE))
                 bad_files <- c(bad_files, f)
+            if (!grepl("\n$", contents, fixed = TRUE, useBytes = TRUE))
+                noEOL <- c(noEOL, f)
         }
         if (length(bad_files)) {
             warningLog(Log, "Found the following Makefile(s) with CR or CRLF line endings:")
             printLog0(Log, .format_lines_with_indent(bad_files), "\n")
             printLog(Log, "Some Unix 'make' programs require LF line endings.\n")
+        } else if (length(noEOL)) {
+            noteLog(Log, "Found the following Makefile(s) without a final LF:")
+            printLog0(Log, .format_lines_with_indent(noEOL), "\n")
+            printLog(Log, "Some 'make' programs ignore lines not ending in LF.\n")
         } else resultLog(Log, "OK")
 
         ## Check src/Makevars[.in] compilation flags.
